--- a/sys/pic32/explorer16/Makefile
+++ b/sys/pic32/explorer16/Makefile
@@ -16,7 +16,7 @@ PARAM += -DLED_SWAP_PORT=TRISA -DLED_SWAP_PIN=3
 PARAM += -DLED_TTY_PORT=TRISA -DLED_TTY_PIN=2
 PARAM += -DLED_KERNEL_PORT=TRISA -DLED_KERNEL_PIN=1
 PARAM += -DLED_DISK_PORT=TRISA -DLED_DISK_PIN=0
-PARAM += -DSD0_MHZ=10
+PARAM += -DSD_MHZ=10
 PARAM += -DCONS_MINOR=1
 PARAM += -DCONS_MAJOR=UART_MAJOR
 PARAM += -DBUS_DIV=1
