--- a/sys/pic32/picadillo/Config
+++ b/sys/pic32/picadillo/Config
@@ -39,7 +39,7 @@ controller      spi2                        # SD card
 
 # microSD card
 device          sd0     at spi2 pin RG9     # select pin
-options         "SD0_MHZ=10"                # speed 10 MHz
+options         "SD_MHZ=10"                 # speed 10 MHz
 
 # ADC driver
 device          adc
