--- a/sys/pic32/picadillo/Makefile
+++ b/sys/pic32/picadillo/Makefile
@@ -6,7 +6,7 @@ PARAM += -DSD_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DPWM_ENABLED
 PARAM += -DHXTFT_ENABLED
-PARAM += -DSD0_MHZ=10
+PARAM += -DSD_MHZ=10
 PARAM += -DCONS_MINOR=0
 PARAM += -DCONS_MAJOR=UART_MAJOR
 PARAM += -DBUS_DIV=1
