--- a/sys/pic32/baremetal/Config
+++ b/sys/pic32/baremetal/Config
@@ -43,4 +43,4 @@ controller      spi2                        # SD card
 
 # SD card
 device          sd0     at spi2 pin RD1     # select pin
-options         "SD0_MHZ=16"                # speed 16 MHz
+options         "SD_MHZ=16"                 # speed 16 MHz
