--- a/sys/pic32/baremetal/Makefile
+++ b/sys/pic32/baremetal/Makefile
@@ -6,7 +6,7 @@ PARAM += -DSD_ENABLED
 PARAM += -DLED_TTY_PORT=TRISD -DLED_TTY_PIN=12
 PARAM += -DLED_DISK_PORT=TRISD -DLED_DISK_PIN=2
 PARAM += -DLED_KERNEL_PORT=TRISD -DLED_KERNEL_PIN=3
-PARAM += -DSD0_MHZ=16
+PARAM += -DSD_MHZ=16
 PARAM += -DCONS_MINOR=0
 PARAM += -DCONS_MAJOR=UART_MAJOR
 PARAM += -DBUS_DIV=1
