--- a/sys/pic32/explorer16/Config
+++ b/sys/pic32/explorer16/Config
@@ -44,7 +44,7 @@ controller      spi1                        # SD card
 
 # SD card
 device          sd0     at spi1 pin RB1     # select pin
-options         "SD0_MHZ=10"                # speed 10 MHz
+options         "SD_MHZ=10"                 # speed 10 MHz
 
 # General purpose I/O ports
 # Flags define a mask of available pins
