--- a/sys/pic32/max32/Config
+++ b/sys/pic32/max32/Config
@@ -44,7 +44,7 @@ controller      spi2                        # SD card
 
 # microSD card
 device          sd0     at spi2 pin RC14    # select pin
-options         "SD0_MHZ=10"                # speed 10 MHz
+options         "SD_MHZ=10"                 # speed 10 MHz
 
 # General purpose I/O ports
 # Flags define a mask of available pins
