--- a/sys/pic32/max32/Makefile
+++ b/sys/pic32/max32/Makefile
@@ -15,7 +15,7 @@ PARAM += -DGPIO6_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DPWM_ENABLED
 PARAM += -DLED_KERNEL_PORT=TRISA -DLED_KERNEL_PIN=3
-PARAM += -DSD0_MHZ=10
+PARAM += -DSD_MHZ=10
 PARAM += -DCONS_MINOR=0
 PARAM += -DCONS_MAJOR=UART_MAJOR
 PARAM += -DBUS_DIV=1
