--- a/sys/pic32/mmb-mx7/Makefile
+++ b/sys/pic32/mmb-mx7/Makefile
@@ -17,7 +17,7 @@ PARAM += -DGPIO_CLEAR_PORT=TRISD -DGPIO_CLEAR_PIN=2
 PARAM += -DLED_TTY_PORT=TRISA -DLED_TTY_PIN=1 -DLED_TTY_INVERT
 PARAM += -DLED_SWAP_PORT=TRISD -DLED_SWAP_PIN=9 -DLED_SWAP_INVERT
 PARAM += -DLED_KERNEL_PORT=TRISA -DLED_KERNEL_PIN=0 -DLED_KERNEL_INVERT
-PARAM += -DSD0_MHZ=8
+PARAM += -DSD_MHZ=8
 PARAM += -DUSB_NUM_STRING_DESCRIPTORS=3
 PARAM += -DUSB_MAX_EP_NUMBER=3
 PARAM += -DCONS_MAJOR=UARTUSB_MAJOR
