--- a/sys/pic32/wf32/Makefile
+++ b/sys/pic32/wf32/Makefile
@@ -15,7 +15,7 @@ PARAM += -DPWM_ENABLED
 PARAM += -DLED_TTY_PORT=TRISA -DLED_TTY_PIN=1
 PARAM += -DLED_DISK_PORT=TRISF -DLED_DISK_PIN=0
 PARAM += -DLED_KERNEL_PORT=TRISA -DLED_KERNEL_PIN=0
-PARAM += -DSD0_MHZ=10
+PARAM += -DSD_MHZ=10
 PARAM += -DCONS_MINOR=0
 PARAM += -DCONS_MAJOR=UART_MAJOR
 PARAM += -DBUS_DIV=1
