--- a/sys/pic32/32mxsdram/Makefile
+++ b/sys/pic32/32mxsdram/Makefile
@@ -5,15 +5,15 @@ PARAM += -DSPI4_ENABLED
 PARAM += -DSD_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DPWM_ENABLED
-PARAM += -DSDRAMP_ENABLED
+PARAM += -DDR_ENABLED
 PARAM += -DSD_ENA_PORT=TRISB -DSD_ENA_PIN=13
 PARAM += -DLED_TTY_PORT=TRISA -DLED_TTY_PIN=14
 PARAM += -DLED_SWAP_PORT=TRISC -DLED_SWAP_PIN=14
 PARAM += -DLED_DISK_PORT=TRISC -DLED_DISK_PIN=13
 PARAM += -DLED_KERNEL_PORT=TRISA -DLED_KERNEL_PIN=15
 PARAM += -DNMOUNT=3
-PARAM += -DPARTITION='sdramp0:sa@2048,fs@14000'
 PARAM += -DKERNEL_EXECUTABLE_RAM
+PARAM += -DSDR_SWAP_KBYTES=2048
 PARAM += -DSD_MHZ=10
 PARAM += -DCONS_MINOR=2
 PARAM += -DCONS_MAJOR=UART_MAJOR
