Add kernel configuration for SnadPIC MX795 board. For board documentation, see: http://www.microcontroller-board.com/snadpic-board-32/11-snadpic-pic32mx795f512l-development-board.html

--- a/sys/pic32/Makefile
+++ b/sys/pic32/Makefile
@@ -3,7 +3,8 @@
 #
 SUBDIR		= baremetal duinomite duinomite-emega explorer16 \
                   fubarino max32 maximite maximite-color mmb-mx7 \
-                  picadillo pinguino-micro sdxl starter-kit ubw32 wf32
+                  picadillo pinguino-micro sdxl snadpic starter-kit \
+                  ubw32 wf32
 
 default:
 
