--- a/sys/pic32/fubarino/Makefile
+++ b/sys/pic32/fubarino/Makefile
@@ -13,6 +13,7 @@ PARAM += -DGPIO5_ENABLED
 PARAM += -DGPIO6_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DPWM_ENABLED
+PARAM += -DBUTTON1_PORT=TRISE -DBUTTON1_PIN=7 -DBUTTON1_INVERT
 PARAM += -DLED_KERNEL_PORT=TRISE -DLED_KERNEL_PIN=5
 PARAM += -DUSB_NUM_STRING_DESCRIPTORS=3
 PARAM += -DUSB_MAX_EP_NUMBER=3
