--- a/sys/pic32/picadillo/Makefile
+++ b/sys/pic32/picadillo/Makefile
@@ -2,7 +2,15 @@ PARAM = -DPICADILLO_35T
 PARAM += -DPIC32MX7
 PARAM += -DUART1_ENABLED
 PARAM += -DSPI2_ENABLED
+PARAM += -DSPI4_ENABLED
 PARAM += -DSD_ENABLED
+PARAM += -DGPIO_ENABLED
+PARAM += -DGPIO1_ENABLED
+PARAM += -DGPIO2_ENABLED
+PARAM += -DGPIO3_ENABLED
+PARAM += -DGPIO4_ENABLED
+PARAM += -DGPIO5_ENABLED
+PARAM += -DGPIO6_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DPWM_ENABLED
 PARAM += -DHXTFT_ENABLED
@@ -57,7 +65,7 @@ OBJS = exec_aout.o exec_conf.o exec_elf.o exec_script.o exec_subr.o \
 	ufs_namei.o ufs_subr.o ufs_syscalls.o ufs_syscalls2.o \
 	vfs_vnops.o vm_sched.o vm_swap.o vm_swp.o clock.o cons.o devsw.o \
 	exception.o machdep.o mem.o signal.o swap.o sysctl.o adc.o \
-	hx8357.o pwm.o sd.o spi.o spi_bus.o uart.o 
+	gpio.o hx8357.o pwm.o sd.o spi.o spi_bus.o uart.o 
 
 CFILES = $S/kernel/exec_aout.c $S/kernel/exec_conf.c $S/kernel/exec_elf.c \
 	$S/kernel/exec_script.c $S/kernel/exec_subr.c \
@@ -82,9 +90,9 @@ CFILES = $S/kernel/exec_aout.c $S/kernel/exec_conf.c $S/kernel/exec_elf.c \
 	$S/kernel/vm_swp.c $S/pic32/clock.c $S/pic32/cons.c \
 	$S/pic32/devsw.c $S/pic32/exception.c $S/pic32/machdep.c \
 	$S/pic32/mem.c $S/pic32/signal.c $S/pic32/swap.c \
-	$S/pic32/sysctl.c $S/pic32/adc.c $S/pic32/hx8357.c \
-	$S/pic32/pwm.c $S/pic32/sd.c $S/pic32/spi.c $S/pic32/spi_bus.c \
-	$S/pic32/uart.c swapunix.c 
+	$S/pic32/sysctl.c $S/pic32/adc.c $S/pic32/gpio.c \
+	$S/pic32/hx8357.c $S/pic32/pwm.c $S/pic32/sd.c $S/pic32/spi.c \
+	$S/pic32/spi_bus.c $S/pic32/uart.c swapunix.c 
 
 # load lines for config "xxx" will be emitted as:
 # xxx: ${SYSTEM_DEP} swapxxx.o
@@ -317,6 +325,9 @@ sysctl.o: $S/pic32/sysctl.c
 	${COMPILE_C}
 
 adc.o: $S/pic32/adc.c
+	${COMPILE_C}
+
+gpio.o: $S/pic32/gpio.c
 	${COMPILE_C}
 
 hx8357.o: $S/pic32/hx8357.c
