VirtualMIPS simulator: create a platform for generic M4K core.

--- a/src/cmd/smallc/Makefile
+++ b/src/cmd/smallc/Makefile
@@ -2,7 +2,7 @@ TOPSRC          = $(shell cd ../../..; pwd)
 include $(TOPSRC)/target.mk
 #include $(TOPSRC)/cross.mk
 
-CFLAGS          = -Os
+CFLAGS          += -Os
 LIBS		= -lc
 
 ARCH            = mips
