Enable mips16e instruction set for all user binaries.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -2,7 +2,7 @@ TOPSRC          = $(shell cd ..; pwd)
 SUBDIR		= startup libc libm libcurses libtermlib libwiznet libreadline libgpanel
 PROG		= ar as aout ld nm ranlib size strip
 
-CFLAGS          += -std=gnu89 -fno-builtin -g -Werror -Wall -DCROSS -I. \
+CFLAGS          = -Os -std=gnu89 -fno-builtin -g -Werror -Wall -DCROSS -I. \
                    -idirafter $(TOPSRC)/include \
                    -idirafter $(TOPSRC)/src/cmd/ar \
                    -idirafter $(TOPSRC)/src/cmd/as
