--- a/lib/libgpanel/Makefile
+++ b/lib/libgpanel/Makefile
@@ -3,7 +3,7 @@ include $(TOPSRC)/target.mk
 
 vpath %.c $(TOPSRC)/src/libgpanel
 
-CFLAGS		+= -B$(TOPSRC)/lib/ $(DEFS) -Wa,-x -Wall -Werror
+CFLAGS		= -Os -B$(TOPSRC)/lib/ $(DEFS) -Wa,-x -Wall -Werror
 
 OBJS            = open.o clear.o pixel.o line.o rect.o fill.o circle.o \
                   image.o char.o text.o text_width.o
