--- a/sys/pic32/wf32/Makefile
+++ b/sys/pic32/wf32/Makefile
@@ -79,8 +79,8 @@ OBJS = exec_aout.o exec_conf.o exec_elf.o exec_script.o exec_subr.o \
 	ufs_namei.o ufs_subr.o ufs_syscalls.o ufs_syscalls2.o \
 	vfs_vnops.o vm_sched.o vm_swap.o vm_swp.o clock.o cons.o devsw.o \
 	exception.o machdep.o mem.o signal.o swap.o sysctl.o adc.o \
-	gpanel.o gpanel-ili9341.o gpanel-nt35702.o gpanel-st7781.o \
-	gpio.o pwm.o sd.o spi.o spi_bus.o uart.o 
+	gpanel.o gpanel-ili9341.o gpanel-nt35702.o gpanel-s6d04h0.o \
+	gpanel-st7781.o gpio.o pwm.o sd.o spi.o spi_bus.o uart.o 
 
 CFILES = $S/kernel/exec_aout.c $S/kernel/exec_conf.c $S/kernel/exec_elf.c \
 	$S/kernel/exec_script.c $S/kernel/exec_subr.c \
@@ -107,9 +107,9 @@ CFILES = $S/kernel/exec_aout.c $S/kernel/exec_conf.c $S/kernel/exec_elf.c \
 	$S/pic32/mem.c $S/pic32/signal.c $S/pic32/swap.c \
 	$S/pic32/sysctl.c $S/pic32/adc.c $S/pic32/gpanel.c \
 	$S/pic32/gpanel-ili9341.c $S/pic32/gpanel-nt35702.c \
-	$S/pic32/gpanel-st7781.c $S/pic32/gpio.c $S/pic32/pwm.c \
-	$S/pic32/sd.c $S/pic32/spi.c $S/pic32/spi_bus.c $S/pic32/uart.c \
-	swapunix.c 
+	$S/pic32/gpanel-s6d04h0.c $S/pic32/gpanel-st7781.c \
+	$S/pic32/gpio.c $S/pic32/pwm.c $S/pic32/sd.c $S/pic32/spi.c \
+	$S/pic32/spi_bus.c $S/pic32/uart.c swapunix.c 
 
 # load lines for config "xxx" will be emitted as:
 # xxx: ${SYSTEM_DEP} swapxxx.o
@@ -351,6 +351,9 @@ gpanel-ili9341.o: $S/pic32/gpanel-ili9341.c
 	${COMPILE_C}
 
 gpanel-nt35702.o: $S/pic32/gpanel-nt35702.c
+	${COMPILE_C}
+
+gpanel-s6d04h0.o: $S/pic32/gpanel-s6d04h0.c
 	${COMPILE_C}
 
 gpanel-st7781.o: $S/pic32/gpanel-st7781.c
