Add Flappy Bird game.

--- a/lib/libgpanel/Makefile
+++ b/lib/libgpanel/Makefile
@@ -5,8 +5,8 @@ vpath %.c $(TOPSRC)/src/libgpanel
 
 CFLAGS		= -Os -B$(TOPSRC)/lib/ $(DEFS) -Wa,-x -Wall -Werror
 
-OBJS            = open.o clear.o pixel.o line.o rect.o fill.o circle.o \
-                  image.o char.o text.o text_width.o
+OBJS            = open.o clear.o pixel.o line.o rect.o fill.o fill_triangle.o \
+                  circle.o image.o char.o text.o text_width.o
 
 all:            ../libgpanel.a
 
