--- a/share/examples/gpanel/Makefile
+++ b/share/examples/gpanel/Makefile
@@ -1,6 +1,6 @@
 CC      = cc
 LIBS    = -lgpanel
-PROG    = tft tftetris pixel line rect fill circle font color speed
+PROG    = tft tftetris pixel line rect fill circle font color speed flappy
 
 FONTS   = 5x7.o 6x9.o digits20.o digits32.o lucidasans11.o lucidasans15.o \
           lucidasans7.o lucidasans9.o verdana7.o
@@ -36,6 +36,9 @@ color:  color.c
 
 speed:  speed.c lucidasans15.o
 	$(CC) $(CFLAGS) -o $@ $(LDFLAGS) speed.c lucidasans15.o $(LIBS)
+
+flappy: flappy.c lucidasans15.o
+	$(CC) $(CFLAGS) -o $@ $(LDFLAGS) flappy.c lucidasans15.o $(LIBS)
 
 font:   font.c $(FONTS)
 	$(CC) $(CFLAGS) -o $@ $(LDFLAGS) font.c $(FONTS) $(LIBS)
