Fix build errors and warnings in zoneinfo and virtualmips.

--- a/tools/virtualmips/Makefile
+++ b/tools/virtualmips/Makefile
@@ -16,7 +16,7 @@ CFLAGS		= -DSIM_PIC32 -DPIC32MX7 -DMAX32
 #CFLAGS		= -DSIM_PIC32 -DPIC32MX7 -DUBW32
 
 CC          = gcc -g
-CFLAGS		+= -Wall -MT $@ -MD -MP -MF .deps/$*.dep -I/opt/local/include -I/opt/local/include/libelf
+CFLAGS		+= -Wall -Werror -MT $@ -MD -MP -MF .deps/$*.dep -I/opt/local/include -I/opt/local/include/libelf
 LIBS		= -lpthread -lelf
 
 ifneq ($(wildcard /usr/lib/librt.a),)
