--- a/sys/pic32/wf32/Config
+++ b/sys/pic32/wf32/Config
@@ -68,16 +68,16 @@ device          pwm
 # TFT display driver with 8-bit parallel interface.
 # Supported controllers: ST7781, ILI9341, NT35702
 device          gpanel
-signal          "LCD_RST"   pin RB10
-signal          "LCD_CS"    pin RB0
-signal          "LCD_RD"    pin RB2
-signal          "LCD_RS"    pin RB8
-signal          "LCD_WR"    pin RB4
-signal          "LCD_D0"    pin RA14
-signal          "LCD_D1"    pin RD3
-signal          "LCD_D2"    pin RE8
-signal          "LCD_D3"    pin RD0
-signal          "LCD_D4"    pin RF1
-signal          "LCD_D5"    pin RD1
-signal          "LCD_D6"    pin RD2
-signal          "LCD_D7"    pin RE9
+signal          "LCD_RST"   pin RB10    # arduino A4
+signal          "LCD_CS"    pin RB0     # arduino A3
+signal          "LCD_RS"    pin RB8     # arduino A2
+signal          "LCD_WR"    pin RB4     # arduino A1
+signal          "LCD_RD"    pin RB2     # arduino A0
+signal          "LCD_D2"    pin RE8     # arduino D2
+signal          "LCD_D3"    pin RD0     # arduino D3
+signal          "LCD_D4"    pin RF1     # arduino D4
+signal          "LCD_D5"    pin RD1     # arduino D5
+signal          "LCD_D6"    pin RD2     # arduino D6
+signal          "LCD_D7"    pin RE9     # arduino D7
+signal          "LCD_D0"    pin RA14    # arduino D8
+signal          "LCD_D1"    pin RD3     # arduino D9
